[package]
name = "gkconfig-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "gkconfig_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
